--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "directus-migration-assistant",
+  "name": "directus-migration-tool",
   "version": "1.0.0",
   "main": "dist-electron/main/index.js",
-  "description": "Directus migration assistant",
+  "description": "Desktop application to migrate Directus between environments",
   "author": "Andres Hernandez Montes",
   "license": "ISC",
   "private": true,
@@ -13,8 +13,9 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 4200",
     "build": "tsc && vite build && electron-builder",
+    "web": "react-scripts start",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "e2e": "playwright test"
