--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: Build and Publish
-        run: npm run publish
+        run: npm run build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
