Update to fix workflows error

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -39,7 +39,7 @@
   },
   "publish": {
     "provider": "generic",
-    "repo": "directus_migration_tool",
+    "repo": "https://github.com/andresh0816/directus_migration_tool",
     "owner": "andresdev16",
     "private": true,
     "channel": "latest",
